[#1453] Evolve raw string identifier to semantic entity
Rework `String` feature identifier to a dedicated type
`FeatureIdentifier`